# petrokit

./: .gitignore  .readthedocs.yml  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: tests.yml
docs/: FASE3_RESUMEN.md  requirements.txt
docs/source/: api.rst  conf.py  contributing.rst  examples.rst  index.rst  installation.rst  quickstart.rst
examples/: analisis_nodal_español.ipynb  engineering_pvt_flowline_english.ipynb  ingenieria_pvt_flowline.ipynb  interactive_plotly_visualizations.ipynb  ipr_advanced_english.ipynb  ipr_avanzado.ipynb  nodal_analysis.ipynb  nodal_analysis_english.ipynb  parametric_sensitivity_interactive.ipynb  vlp_advanced_english.ipynb  vlp_avanzado.ipynb
petrokit/: __init__.py  flowline.py  ipr.py  ipr_advanced.py  multiphase.py  multiphase_hb.py  nodal.py  pvt.py  utils.py  vlp.py  vlp_advanced.py
petrokit.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_flowline.py  test_flowline_dispatcher.py  test_ipr.py  test_ipr_advanced.py  test_multiphase_beggs_brill.py  test_multiphase_hb.py  test_nodal.py  test_nodal_blackoil.py  test_phase2_api.py  test_pvt.py  test_pvt_integration_vlp.py  test_utils.py  test_vlp.py  test_vlp_advanced.py  test_vlp_blackoil.py  test_vlp_dispatcher.py  test_vlp_hb_dispatch.py
