[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "petrokit"
version = "0.1.0"
authors = [
  { name="Camilo Andres Ortegon Cuevas", email="camilo.ortegonc@outlook.com" },
]
description = "Librería para análisis de transporte y producción en ingeniería de petróleos"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["numpy", "matplotlib", "plotly", "ipywidgets"]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "sphinx", "sphinx-rtd-theme"]

[project.urls]
Homepage = "https://github.com/OrtegonAutomation/petrokit"
Repository = "https://github.com/OrtegonAutomation/petrokit"
Issues = "https://github.com/OrtegonAutomation/petrokit/issues"
